cmake_minimum_required(VERSION 3.29)
project(cplusplus)

set(CMAKE_CXX_STANDARD 20)

add_executable(cplusplus main.cpp
        lb/lb4/zd_6/zd6.cpp
        lb/lb4/zd_6/zd6.h
        lb/lb4/zd_7/main.cpp
        lb/lb4/zd_7/main.h
        lb/lb4/zd_8/main.cpp
        lb/lb4/zd_8/main.h
        lb/lb4/zd_9/main.cpp
        lb/lb4/zd_9/main.h
        lb/lb5/zd_1/main.cpp
        lb/lb5/zd_1/main.h
        lb/lb5/zd_2/main.cpp
        lb/lb5/zd_2/main.h
        lb/lb5/zd_3/main.cpp
        lb/lb5/zd_3/main.h
        lb/lb6/main_zd1.cpp
        lb/lb6/main_zd1.h
        lb/lb7/zd_2_6/main.cpp
        lb/lb7/zd_2_6/main.h
        lb/lb7/zd_2_7/main.cpp
        lb/lb7/zd_2_7/main.h
        lb/lb7/zd_2_10/main.cpp
        lb/lb7/zd_2_10/main.h
        lb/lb8/zd_1/main.cpp
        lb/lb8/zd_1/main.h
        lb/lb8/zd_2/main.cpp
        lb/lb8/zd_2/main.h
        lb/lb9/zd_3/main.cpp
        lb/lb9/zd_3/main.h
        lb/lb9/zd_4/main.cpp
        lb/lb9/zd_4/main.h
        lb/lb9/zd_5/main.cpp
        lb/lb9/zd_5/main.h
        lb/lb9/zd_6/main.cpp
        lb/lb9/zd_6/main.h
        lb/lb10/zd_1/main.cpp
        lb/lb10/zd_1/main.h
        lb/lb10/zd_2/main.cpp
        lb/lb10/zd_2/main.h
        lb/lb10/zd_3/main.cpp
        lb/lb10/zd_3/main.h
        lb/lb10/zd_4/main.cpp
        lb/lb10/zd_4/main.h
        lb/lb10/zd_5/main.cpp
        lb/lb10/zd_5/main.h
        lb/lb10/zd_6/main.cpp
        lb/lb10/zd_6/main.h
        lb/lb10/zd_15/main.cpp
        lb/lb10/zd_15/main.h
        lb/lb11/zd_1/main.cpp
        lb/lb11/zd_1/main.h
        lb/lb11/zd_2/main.cpp
        lb/lb11/zd_2/main.h
        lb/lb16/zd_2/main.cpp
        lb/lb19/lb_4_5_7_7/main.cpp
        lb/lb19/lb_4_5_7_7/main.h
        lb/lb19/lb_4_5_7_8/main.cpp
        lb/lb19/lb_4_5_7_8/main.h
        lb/lb13/main.cpp
        lb/lb13/main.h
        lb/lb12/zd_1/main.cpp
        lb/lb12/zd_1/main.h
        lb/lb12/zd_2/main.cpp
        lb/lb12/zd_2/main.h
        lb/lb14/zd_1/main.cpp
        lb/lb14/zd_1/main.h
        lb/lb14/zd_2/main.cpp
        lb/lb14/zd_2/main.h
        lb/lb15/zd_1/main.cpp
        lb/lb15/zd_1/main.h
        lb/lb15/zd_2/main.cpp
        lb/lb15/zd_2/main.h
        lb/lb16/main.cpp
        lb/lb16/main.h
        lb/lb17/zd_1/main.cpp
        lb/lb17/zd_1/main.h
        lb/lb17/zd_2/main.cpp
        lb/lb17/zd_2/main.h
        lb/lb18/main.cpp
        lb/lb18/main.h
)
